Microservice_architecture_and_containerization/HW7/sts_prometheus3.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: "prometheus"
  replicas: 1
  selector:
    matchLabels:
            app: prometheus
  template:
    metadata:
      labels:
         app: prometheus
    spec:
      serviceAccount: prometheus
      containers:
        - name: prometheus-server-2-19-2
          image: prom/prometheus:v2.19.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 200m
              memory: 1000Mi
          volumeMounts:
            - name: config-volume-prometheus
              mountPath: /etc/prometheus
            - name: prometheus-data
              mountPath: /data
              subPath: ""
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume-prometheus
          configMap:
            name: prometheus-config
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      storageClassName: csi-ceph-hdd-dp1
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
