Microservice_architecture_and_containerization/HW7/ingress_prometheus.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
     - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: prometheus
            servicePort: 80
